--- a/src/App.css
+++ b/src/App.css
@@ -59,10 +59,8 @@ body{
         display: flex;
         flex-direction: column;
         text-align: center;
-        margin: 40px 40px;
-        padding-left: 50px;
-        padding-right: 50px;
-        width: 100%;
+        margin-top: 5rem;
+        width: 85%;
 
     }
     .card img{
