--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ body{
     margin: auto;
 }
 
-.card img{
+ .img-depto{
     max-width: 220px;
     width: 20vw;
     height: 300px;
@@ -25,7 +25,7 @@ body{
     box-shadow: 0 60px 40px rgb(0, 0, 0 / 8%);
 }
 
-.card h2{
+.titulo-card{
     color: rgb(0, 0, 0) / 90%;
     display: flex;
     justify-content: center;
@@ -33,14 +33,14 @@ body{
     font-size: 25px;
 }
 
-.card p{
+.parrafo-card{
     color: rgb(0,0, 0 / 70%);
     font-size: 15px;
     padding-bottom: 20px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.card button{
+.button-card{
     border: 0;
     background-color: #645B45;
     color: #f8f8f8;
@@ -50,9 +50,7 @@ body{
     border-radius: 40px;
 }
 
-.card button:hover{
-    background-color: #C7BFB4;
-}
+
 
 @media (width <= 1024px ){
     .card{
